HDPMI makefiles use EDITPE and PESTUB from HXDEV

--- a/Src/DPMI/MAKEFILE
+++ b/Src/DPMI/MAKEFILE
@@ -7,16 +7,13 @@ name=DPMI
 
 OUTDIR=RELEASE
 
-ASM=@jwasm.exe -mz -nologo -Sg -Fl$* -Fo$* -I..\..\Include
-
 ALL: $(OUTDIR) $(OUTDIR)\$(name).EXE
 
 $(OUTDIR):
 	@mkdir $(OUTDIR)
 
 $(OUTDIR)\$(name).exe: $(name).asm printf.inc makefile
-	$(ASM) $(name).asm
-	copy $*.exe ..\..\test
+	@jwasm.exe -mz -nologo -Sg -Fl$* -Fo$* -I..\..\Include $(name).asm
 
 clean:
 	erase $(OUTDIR)\*.exe
