--- a/SrcEmu/MAKEFILE
+++ b/SrcEmu/MAKEFILE
@@ -79,30 +79,49 @@ ALL:
     cd ..
 
 install: 
-	@copy DKRNL32\RELEASE\DKRNL32.DLL ..\Bin
-	@copy DKRNL32\DKRNL32.TXT         ..\Doc
-	@copy DKRNL32\DKRNLHIS.TXT        ..\Doc
+	@copy DKRNL32\SBEMU\DKRNL32.DLL    $(HXINST)\Bin
+	@copy DKRNL32\SBEMU\DKRNL32.LIB    $(HXINST)\Lib
+	@copy DKRNL32\SBEMU\DKRNL32S.LIB   $(HXINST)\Lib
+	@copy DKRNL32\DKRNL32.TXT          $(HXINST)\Doc
+	@copy DKRNL32\DKRNLHIS.TXT         $(HXINST)\Doc
 
-	@copy NTLFNHLP\RELEASE\NTLFNHLP.DLL ..\Bin
+	@copy NTLFNHLP\RELEASE\NTLFNHLP.DLL $(HXINST)\Bin
 
-	@copy DGDI32\RELEASE\DGDI32.DLL   ..\Bin
-	@copy DGDI32\DGDI32.TXT           ..\Doc
+	@copy DGDI32\RELEASE\DGDI32.DLL    $(HXINST)\Bin
+	@copy DGDI32\RELEASE\DGDI32.LIB    $(HXINST)\Lib
+	@copy DGDI32\RELEASE\DGDI32S.LIB   $(HXINST)\Lib
+	@copy DGDI32\DGDI32.TXT            $(HXINST)\Doc
 
-	@copy DUSER32\RELEASE\DUSER32.DLL ..\Bin
-	@copy DUSER32\DUSER32.TXT         ..\Doc
+	@copy DUSER32\RELEASE\DUSER32.DLL  $(HXINST)\Bin
+	@copy DUSER32\RELEASE\DUSER32.LIB  $(HXINST)\Lib
+	@copy DUSER32\RELEASE\DUSER32S.LIB $(HXINST)\Lib
+	@copy DUSER32\DUSER32.TXT          $(HXINST)\Doc
 
-	@copy DADVAPI\RELEASE\DADVAPI.DLL ..\Bin
-	@copy DADVAPI\DADVAPI.TXT         ..\Doc
+	@copy DADVAPI\RELEASE\DADVAPI.DLL  $(HXINST)\Bin
+	@copy DADVAPI\RELEASE\DADVAPI.LIB  $(HXINST)\Lib
+	@copy DADVAPI\RELEASE\DADVAPIS.LIB $(HXINST)\Lib
+	@copy DADVAPI\DADVAPI.TXT          $(HXINST)\Doc
 
-	@copy DDDRAW\RELEASE\DDDRAW.DLL   ..\Bin
-	@copy DDDRAW\DDDRAW.TXT           ..\Doc
-	@copy DINPUT\RELEASE\DINPUT.DLL   ..\Bin
-	@copy DINPUT\DINPUT.TXT           ..\Doc
-	@copy DSOUND\RELEASE\DSOUND.DLL   ..\Bin
-	@copy DSOUND\DSOUND.TXT           ..\Doc
-	@copy WINMM\RELEASE\WINMM.DLL     ..\Bin
-	@copy WINMM\WINMM.TXT             ..\Doc
-
+	@copy DDDRAW\RELEASE\DDDRAW.DLL    $(HXINST)\Bin
+	@copy DDDRAW\DDDRAW.TXT            $(HXINST)\Doc
+	@copy DINPUT\RELEASE\DINPUT.DLL    $(HXINST)\Bin
+	@copy DINPUT\DINPUT.TXT            $(HXINST)\Doc
+	@copy DSOUND\RELEASE\DSOUND.DLL    $(HXINST)\Bin
+	@copy DSOUND\DSOUND.TXT            $(HXINST)\Doc
+	@copy OLE32\RELEASE\OLE32.DLL      $(HXINST)\Bin
+	@copy OLE32\RELEASE\OLE32S.LIB     $(HXINST)\Lib
+	@copy OLEAUT32\RELEASE\OLEAUT32.DLL $(HXINST)\Bin
+	@copy OLEAUT32\RELEASE\OLEAUTOS.LIB $(HXINST)\Lib
+	@copy SHELL32\RELEASE\SHELL32.DLL  $(HXINST)\Bin
+	@copy SHELL32\RELEASE\SHELL32.LIB  $(HXINST)\Lib\DSHELL32.LIB
+	@copy SHELL32\SHELL32.TXT          $(HXINST)\Doc
+	@copy VERSION\RELEASE\VERSION.DLL  $(HXINST)\Bin
+	@copy VERSION\RELEASE\VERSIONS.LIB $(HXINST)\Lib
+	@copy VERSION\VERSION.TXT          $(HXINST)\Doc
+	@copy WINMM\RELEASE\WINMM.DLL      $(HXINST)\Bin
+	@copy WINMM\WINMM.TXT              $(HXINST)\Doc
+	@copy WSOCK32\RELEASE\WSOCK32.DLL  $(HXINST)\Bin
+	@copy WSOCK32\WSOCK32.TXT          $(HXINST)\Doc
 
 clean: 
     cd COMCTL32
