--- a/Src/MZSUPP/Makefile
+++ b/Src/MZSUPP/Makefile
@@ -7,9 +7,6 @@
 
 !include <..\dirs>
 
-# define directory for OMF libs/modules
-LIBOMF=..\..\LibOMF
-
 !ifdef TRACE
 ASMT=-D?TRACE=1
 !else
@@ -32,7 +29,7 @@ STUBDIR=STUB
 MASM=0
 !endif
 
-ASMOPT= -c -nologo -Sg -Fl$* -Fo$*.OBJ -D?W32=0 -D?FLAT=0 $(ASMT) -I$(INC32DIR)
+ASMOPT= -c -nologo -Sg -Fl$* -Fo$*.OBJ $(ASMT) -I$(INC32DIR)
 !if $(MASM)
 ASM=@ml.exe
 !else
@@ -41,7 +38,7 @@ ASM=@jwasm.exe
 
 ALL: $(OUTDIR) $(STUBDIR) $(OUTDIR)\JMPPM32.LIB $(OUTDIR)\JMPPM32.OBJ $(OUTDIR)\defstack.obj \
 	$(OUTDIR)\dmysrvr.obj $(OUTDIR)\dmymove.obj \
-	$(STUBDIR)\loadsrvr.OBJ $(OUTDIR)\loadpe.obj
+	$(STUBDIR)\loadsrvr.OBJ $(OUTDIR)\loadpe.obj $(OUTDIR)\InitPM.obj
 
 $(OUTDIR):
 	@mkdir $(OUTDIR)
@@ -58,9 +55,6 @@ $(OUTDIR)\JMPPM32.LIB: $(OUTDIR)\getcmdl.obj $(OUTDIR)\getenv.obj \
 +getcmdl.obj +getenv.obj +loadsrvr.obj +movehigh.obj +stksize.obj +loadext.obj +loadpe.obj
 <<
 	@cd ..
-!if $(DEBUG)==0
-	@copy $(OUTDIR)\JMPPM32.LIB $(LIBOMF)\*.* >NUL
-!endif
 
 $(OUTDIR)\getcmdl.obj: getcmdl.asm makefile
 	$(ASM) $(ASMOPT) getcmdl.asm
@@ -85,32 +79,21 @@ $(OUTDIR)\loadpe.obj: loadpe.asm makefile
 
 $(STUBDIR)\loadsrvr.obj: loadsrvr.asm ..\hdpmi\stub32\hdpmi32.inc makefile
 	$(ASM) $(ASMOPT) -D?HDPMI=1 loadsrvr.asm
-	@copy $*.obj $(LIBOMF)\*.* >NUL
-
 
 $(OUTDIR)\JMPPM32.OBJ: jmppm32.asm makefile
 	$(ASM) $(ASMOPT) jmppm32.asm
-!if $(DEBUG)==0
-	@copy $*.OBJ $(LIBOMF)\*.* >NUL
-!endif
 
 $(OUTDIR)\DEFSTACK.OBJ: defstack.asm makefile
 	$(ASM) $(ASMOPT) defstack.asm
-!if $(DEBUG)==0
-	@copy $*.OBJ $(LIBOMF)\*.* >NUL
-!endif
 
 $(OUTDIR)\DMYSRVR.OBJ: dmysrvr.asm makefile
 	$(ASM) $(ASMOPT) dmysrvr.asm
-!if $(DEBUG)==0
-	@copy $*.OBJ $(LIBOMF)\*.* >NUL
-!endif
 
 $(OUTDIR)\DMYMOVE.OBJ: dmymove.asm makefile
 	$(ASM) $(ASMOPT) dmymove.asm
-!if $(DEBUG)==0
-	@copy $*.OBJ $(LIBOMF)\*.* >NUL
-!endif
+
+$(OUTDIR)\InitPM.OBJ: InitPM.asm makefile
+	$(ASM) $(ASMOPT) InitPM.asm
 
 clean:
 	@del $(OUTDIR)\*.obj
