--- a/Src/DPMILDR/MAKEFILE
+++ b/Src/DPMILDR/MAKEFILE
@@ -6,9 +6,11 @@ DEBUG = 0
 !endif
 
 ALL:
+    @$(MAKE) -f LIB16.MAK DEBUG=$(DEBUG) 
     @$(MAKE) -f DPMILD32.MAK DEBUG=$(DEBUG) 
     @$(MAKE) -f DPMILD16.MAK DEBUG=$(DEBUG) 
 
 clean:
+    @$(MAKE) -f LIB16.MAK DEBUG=$(DEBUG) clean
     @$(MAKE) -f DPMILD32.MAK DEBUG=$(DEBUG) clean
     @$(MAKE) -f DPMILD16.MAK DEBUG=$(DEBUG) clean
