--- a/Src/MZSUPP16/MAKEFILE
+++ b/Src/MZSUPP16/MAKEFILE
@@ -12,9 +12,12 @@ AOPTD=
 
 OUTDIR=RELEASE
 
-AOPT= -c -nologo -Sg -Fl$* -Fo$*.OBJ $(AOPTD) -I$(INC32DIR)
+AOPT= -c -q -Sg -Fl$* -Fo$*.OBJ $(AOPTD) -I$(INC32DIR)
 
-ALL: $(OUTDIR)\JMPPM16.OBJ $(OUTDIR)\JMPPM16W.OBJ $(OUTDIR)\JMPPM16M.OBJ $(OUTDIR)\InitPM16.OBJ
+ALL: $(OUTDIR) $(OUTDIR)\JMPPM16.OBJ $(OUTDIR)\JMPPM16W.OBJ $(OUTDIR)\JMPPM16M.OBJ $(OUTDIR)\InitPM16.OBJ
+
+$(OUTDIR):
+	@mkdir $(OUTDIR)
 
 $(OUTDIR)\JMPPM16.OBJ: jmppm16.asm makefile
 	@$(ASM) $(AOPT) -D?C=0 JMPPM16.ASM
