--- a/Src/MAKEFILE
+++ b/Src/MAKEFILE
@@ -56,6 +56,8 @@ ALL:
     @$(MAKE) DEBUG=$(DEBUG) 
     cd ..\SHDPMI
     @$(MAKE) DEBUG=$(DEBUG) 
+    cd ..\DPMI
+    @$(MAKE) DEBUG=$(DEBUG) 
     cd ..
 
 install: 
@@ -126,8 +128,6 @@ install:
 	@copy HXHELP\Release\HXHELP.EXE   $(HXINST)\OWSupp\WDSupp
 	@copy HXHELP\HX.TRP\HX.TRP        $(HXINST)\OWSupp\WDSupp
 	@copy HXHELP\HXHELP.TXT           $(HXINST)\OWSupp\WDSupp
-	@copy HXHELP\Rel16\HXHELP16.EXE   $(HXINST)\OWSupp16\HXHP16.EXE
-	@copy HXHELP\HX.TRP\HX16.TRP      $(HXINST)\OWSupp16
 
 	@copy SHDPMI\Release\SHDPMI.EXE   $(HXINST)\Bin
 	@copy SHDPMI\Release\SHDPMIR.EXE  $(HXINST)\Bin
@@ -165,5 +165,7 @@ clean:
     cd ..\PATCHNE
     @$(MAKE) DEBUG=$(DEBUG) clean 
     cd ..\SHDPMI
+    @$(MAKE) DEBUG=$(DEBUG) clean 
+    cd ..\DPMI
     @$(MAKE) DEBUG=$(DEBUG) clean 
     cd ..
